Changed build.boot to use current Hoplon rendering methods

--- a/slides/Makefile
+++ b/slides/Makefile
@@ -1,8 +1,8 @@
+watch:
+	boot development
+
+production:
+	boot production
+
 clean:
 	rm -rf resources/public target/stale target/classes
-
-watch:
-	@JVM_OPTS="-Xmx1024m -server" boot watch hoplon
-
-dev:
-	@lein run
