--- a/slides/Makefile
+++ b/slides/Makefile
@@ -1,17 +1,13 @@
 REPO := $(shell git config --get remote.origin.url)
 GH_PAGES = .gh-pages
 
+all: src/clj/sample_code.clj
+
 watch:
 	boot development
 
 production:
 	boot production
-
-.gh-pages:
-	@echo $(REPO)
-	git clone "$(REPO)" "$(GH_PAGES)" || echo "$(GH_PAGES) exists"
-	@echo "Donezo"
-	(cd $(GH_PAGES) && git checkout gh-pages) || (cd $(GH_PAGES) && git checkout --orphan gh-pages && git rm -rf .)
 
 publish: production
 	cp -r resources/public/* $(GH_PAGES)
@@ -22,6 +18,18 @@ publish: production
 		git push origin gh-pages
 
 clean:
-	rm -rf $(GH_PAGES) resources/public target/stale target/classes
+	rm -rf $(GH_PAGES) resources/public target/stale target/classes src/clj/sample_code.clj
 
-.PHONY: init clean commit watch production
+.PHONY: all clean publish watch production
+
+.gh-pages:
+	@echo $(REPO)
+	git clone "$(REPO)" "$(GH_PAGES)" || echo "$(GH_PAGES) exists"
+	@echo "Donezo"
+	(cd $(GH_PAGES) && git checkout gh-pages) || (cd $(GH_PAGES) && git checkout --orphan gh-pages && git rm -rf .)
+
+src/clj/sample_code.clj: src/cljs/simplicity_deck/sample_code.cljs.hl
+	@echo "(ns sample-code)\n\n" > $@
+	awk '/;;{{/ {p=1}; p; /;;}}/ {p=0}' $< >> $@
+	perl -pi -e 's/;;({{|}})//;s/^ {3,4}//;' $@
+
